ansible/jenkins/files/jenkins_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins-namespace
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      #nodePort: 30000
  selector:
    app: app_jenkins

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-jnlp
  namespace: jenkins-namespace
spec:
  type: ClusterIP
  ports:
    - port: 50000
      targetPort: 50000
  selector:
    app: app_jenkins
