ansible/jenkins/files/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins-namespace
  labels:
    app: app_jenkins
spec:
  rules:
  #- host: devops.com
  -  http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
